web/css/style-liveres.css
/* ... */
tr.yellow_row_new>td {
  border-top: 2px solid grey !important;
}

tr.yellow_row_fnq>td {
  border-top: 3px solid grey !important;
}

tr.yellow_row .plustime,
tr.yellow_row .besttime,
tr.yellow_row .legtime,
tr.yellow_row .estimate,
tr.yellow_row .place,
tr.yellow_row .bestplace,
tr.yellow_row td i,
tr.yellow_row .bib,
tr.yellow_row .club,
tr.yellow_row .relayclub,
tr.yellow_row_fnq .plustime,
tr.yellow_row_fnq .besttime,
tr.yellow_row_fnq .legtime,
tr.yellow_row_fnq .estimate,
tr.yellow_row_fnq .place,
tr.yellow_row_fnq .bestplace,
tr.yellow_row_fnq td i,
tr.yellow_row_fnq .bib,
tr.yellow_row_fnq .club,
tr.yellow_row_fnq .relayclub {
  color: #000
}

.yellow_row .besttime,
.yellow_row_fnq .besttime {
  text-decoration-color: red;
}

/* Standalone colored cells */
.yellow_cell {
  color: #000;
  background: #FF0 !important;
  box-shadow: none !important;
}

.green_cell {
  color: #000;
  background: #0F0 !important;
  box-shadow: none !important;
}

/* Pulsing / live indicators */
@keyframes blinker {

  0%,
  100% {
    opacity: 0
  }

  50% {
    opacity: 1
  }
}

@keyframes blinkerCom {

  0%,
  100% {
    color: #51FF00;
    opacity: 0
  }

  50% {
    color: #51FF00;
    opacity: 1
  }
}

.pulsing {
  animation: blinker 1s ease-in-out infinite;
  color: var(--livered);
}

.pulsingLive {
  animation: blinkerCom 1s ease-in-out 30;
  color: gray;
}

.liveClient {
  animation: blinker 1s ease-in-out infinite;
  color: #51ff00;
}

.notLiveClient {
  color: gray;
}

/* Timing / place formatting */
.besttime {
  color: #000;
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-decoration-color: red;
}

.bestplace,
.place,
.plustime,
.legtime,
.bib,
.estimate,
.estimatebest {
  color: dimgrey;
}

.time1,
.place1 {
  color: red;
}

.time23,
.place23 {
  color: blue;
}

.bib {
  font-style: normal;
}

.estimate,
.estimatebest {
  font-style: italic;
}

.estimatebest {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-decoration-color: red;
}

.gained,
.lost {
  color: #000;
}

a.club,
a.relayclub {
  color: var(--livered);
}

td i {
  color: var(--livered);
  font-style: normal;
}

.timeWidth,
.timePlaceWidth {
  min-width: 3em;
}

.hideplace {
  opacity: 0;
}

/* Scrolling info text */
#divInfoText {
  transform: translateX(100%);
  animation: scroll-animation 20s linear infinite;
}

@keyframes scroll-animation {
  from {
    transform: translateX(100%);
  }

  to {
    transform: translateX(-100%);
  }
}

/* Utility classes */
.maindiv {
  width: 100%;
  display: block;
}

.small {
  font-size: .8em;
}

.large {
  font-size: 1.167em;
}

.bold {
  font-weight: bold;
}

.red {
  color: #be0101;
}

.green {
  color: #2e8d03;
}

.darkblue {
  color: #3A5C9C;
}

.grey {
  color: #666;
}

/* Menu */
.mttop {
  display: block;
  background: #ABC9EF;
  height: 1px;
  margin: 0 1px;
}

td.menuchosen,
td.menu {
  padding: 2px 9px 4px;
  color: #FFF;
  font-weight: bold;
  border-left: 1px solid #ABC9EF;
  border-right: 1px solid #0B5280;
}

td.menuchosen {
  background: #3A5C9C;
}

td.menu {
  background: #6C95CD;
}

td.menu a:link,
td.menu a:visited,
td.menuchosen a:link,
td.menuchosen a:visited {
  color: #FFF;
  text-decoration: none;
}

td.menuchosen a:hover {
  color: #C0D6FF;
}

/* Categories */
.categories {
  background: #F4F8FD;
  border: 1px solid #ABC9EF;
}

.categoriesheader {
  color: #FFA02B;
  font-size: 1.27em;
  font-weight: bold;
}

/* Tooltip */
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  background: var(--bkdark);
  color: #FFF;
  text-align: center;
  border-radius: 5px;
  padding: .1em .5em;
  position: absolute;
  bottom: 0;
  right: 5em;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  bottom: .4em;
  right: -.7em;
  border: .4em solid transparent;
  border-left-color: var(--bkdark);
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: .9;
}

/* Split chooser / menu */
.noUnderline a,
.splitChooser a {
  text-decoration: none;
  color: #FFF;
}

.noUnderline a {
  font-size: 1.3em;
}

.menuicon {
  display: inline-block;
  cursor: pointer;
}

.dropbtn,
.dropbtnClass {
  background: var(--bkdark);
  color: #FFF;
  font-size: 1.3em;
  padding: 0;
  border: none;
  cursor: pointer;
}

.dropbtn {
  font-size: 1em;
  opacity: .9;
  text-align: right;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  right: 4px;
  display: none;
  position: absolute;
  background: var(--bkdark);
  color: #FFF;
  overflow: hidden;
  z-index: 1;
}

.dropdown-content a {
  color: #FFF;
  padding: 5px;
  display: block;
  text-decoration: none;
}

.show {
  display: block;
}

/* Split miss */
.splitMiss {
  background: #FFCCCC !important;
}

/* Buttons */
.navbtn,
div.dt-buttons>.dt-button {
  border: none;
  background: #000;
  font-size: 1.3em;
  cursor: pointer;
  display: inline-block;
  color: #FFF;
  width: 1.5em;
  height: 1.5em;
  border-radius: .3em;
  padding: 0;
  text-align: center;
  line-height: normal;
}

.navbtn:hover,
div.dt-buttons>.dt-button:hover {
  background: gray;
}

/* Misc */
.selectControl {
  cursor: pointer;
}

.numrunners {
  border-spacing: 10px 0;
  text-align: left;
}

.numrunners td {
  font-size: .7em;
  color: gray;
}

/* Class/results layout */
.container {
  display: flex;
}

.class-column {
  flex: 1;
  position: relative;
  display: inline-block;
  z-index: 100;
  line-height: 1.4em;
  font-size: 1.3em;
  max-width: 8em;
  min-width: 8em;
}

.class-column.unpinned {
  max-width: 0 !important;
  min-width: 0 !important;
}

.class-column-content {
  box-sizing: border-box;
  position: relative;
  top: 3px;
  left: 0;
  color: #FFF;
  background: var(--bkdark);
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 101;
  padding: 3px 3px 3px 10px;
  min-width: 8em;
  max-width: 8em;
}

.class-column-content a {
  color: #FFF;
}
/* ... */

